--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,18 @@
     <div class="container">
         <h1>Sablon</h1>
 
+        <table id="dolgozoTabla"  class="table table-striped table-hover table-success">
+            <thead>
+                <tr>
+                    <th>Név</th>
+                    <th>Település</th>
+                    <th>Fizetés</th>
+                </tr>
+            </thead>
+            <tbody id="dolgozoTorzs">
+
+            </tbody>
+        </table>
     </div>
     <script src="app.js"></script>
 </body>
