--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,22 @@
     <div class="container">
         <h1>Sablon</h1>
 
-        <table id="dolgozoTabla"  class="table table-striped table-hover table-success">
-            <thead>
+        <div class="addForm row">
+
+            <div class="col">
+                <input id="name" class="form-control" type="text" placeholder="Név">
+            </div>
+            <div class="col">
+                <input id="city" class="form-control" type="text" placeholder="Település">
+            </div>
+            <div class="col">
+                <input id="salary" class="form-control" type="text" placeholder="Fizetés">
+            </div>
+            <button id="addButton" class="btn btn-success col">Hozzáad</button>
+        </div>
+
+        <table id="dolgozoTabla"  class="table table-striped table-hover table-success mt-3">
+            <thead class="table-dark">
                 <tr>
                     <th>Név</th>
                     <th>Település</th>
