--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
         <table id="dolgozoTabla"  class="table table-striped table-hover table-success mt-3">
             <thead class="table-dark">
                 <tr>
+                    <th>#</th>
                     <th>Név</th>
                     <th>Település</th>
                     <th>Fizetés</th>
@@ -89,7 +90,7 @@
 
 
             
-          <div class="addForm">
+          <div class="modifyForm">
 
             <div class="mt-3">
                 <input id="modifyId" type="text" readonly>
@@ -112,7 +113,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Bezárás</button>
-          <button type="button" class="btn btn-primary" id="addButton" data-bs-dismiss="modal">Mentés</button>
+          <button type="button" class="btn btn-primary" id="saveButton" data-bs-dismiss="modal">Mentés</button>
         </div>
       </div>
     </div>
